# lirisv4_cpp

./: .gitignore  CMakeLists.txt  west.yml
.github/workflows/: build.yml
docker/: Dockerfile  requirements.txt
drivers/: CMakeLists.txt  Kconfig
drivers/blink/: gpio_led.c
drivers/dac/: CMakeLists.txt  Kconfig
drivers/dac/ltc2640/: CMakeLists.txt  Kconfig  ltc2640.c
drivers/eeprom/: CMakeLists.txt  Kconfig  eeprom_25aa02.c
drivers/flash/: CMakeLists.txt  Kconfig  cy15b104q.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/ad7685/: CMakeLists.txt  Kconfig  ad7685.c
drivers/sensor/adt7320/: CMakeLists.txt  Kconfig  adt7320.c  adt7320.h
dts/bindings/dac/: adi,ltc2640.yaml
dts/bindings/mtd/: cypress,cy15b104q.yaml  microchip,25aa02.yaml
dts/bindings/sensor/: adi,ad7685.yaml  adi,adt7320.yaml
lirisv4/: CMakeLists.txt  README.rst  VERSION  debug.conf  overlay-bt.conf  pm_static.yml  prj.conf  sample.yaml  sysbuild.conf
lirisv4/boards/: lirisv3.overlay
lirisv4/src/: bluetooth.cpp  common.h  main.c  main.cpp
scripts/: example_runner.py  example_west_command.py
